--- a/html/el_club.html
+++ b/html/el_club.html
@@ -1,240 +1,220 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>El club</title>
 
-    <!-- FontAwesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>El club</title>
 
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/el_club.css" />
-  </head>
+  <!-- FontAwesome CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-  <body>
-    <!-- Menu Start -->
-    <div class="container">
-      <!-- Header Start -->
-      <div class="row header-row">
-        <div class="col"></div>
-        <div class="col-10 header-col">
-          <a href="/html/index.html">
-            <img src="/assets/logo_ritmica2.png" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/el_club.css" />
+</head>
+
+<body>
+  <!-- Menu Start -->
+  <div class="container">
+    <!-- Header Start -->
+    <div class="row header-row">
+      <div class="col"></div>
+      <div class="col-10 header-col">
+        <a href="/html/index.html">
+          <img src="/assets/logo_ritmica2.png" />
+        </a>
+        <div class="header-icon-wrapper">
+          <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
+          <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
+          <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
+          <a href="/html/login.html" class="far fa-user"></a>
+        </div>
+      </div>
+      <div class="col"></div>
+    </div>
+    <!-- Header End -->
+
+    <!-- Navbar Start -->
+    <div class="row nav-row">
+      <div class="col"></div>
+      <div class="col-10 nav-col" id="nav-col">
+        <a class="nav-btn" href="/html/index.html">Inicio</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="/html/el_club.html">El Club</a>
+          <div class="dropdown-content">
+            <a href="/html/cuerpo_tecnico.html">Cuerpo técnico</a>
+            <a href="/html/palmares.html">Palmarés</a>
+          </div>
+        </div>
+        <a class="nav-btn" href="/html/normativa.html">Normativa</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="/html/actividades.html">Actividades</a>
+          <div class="dropdown-content">
+            <a href="/html/actividades_verano.html">Actividades de verano</a>
+            <a href="/html/escuela.html">Escuela</a>
+            <a href="/html/federadas.html">Federadas</a>
+          </div>
+        </div>
+        <a class="nav-btn" href="/html/matriculacion.html">Matriculación</a>
+        <div class="dropdown">
+          <a class="nav-btn" href="/html/competiciones.html">Competiciones</a>
+          <div class="dropdown-content">
+            <a href="/html/provincial.html">Provincial</a>
+            <a href="/html/autonomica.html">Autonómica</a>
+            <a href="/html/nacional.html">Nacional</a>
+          </div>
+        </div>
+        <a class="nav-btn" href="/html/noticias.html">Noticias</a>
+        <a class="nav-btn" href="/html/galeria.html">Galería</a>
+        <a class="nav-btn" href="/html/contacto.html">Contacto</a>
+        <a class="dropdown-icon" href="javascript:void(0)">
+          <span class="fas fa-bars"></span>
+        </a>
+      </div>
+      <div class="col"></div>
+    </div>
+    <!-- Navbar End -->
+  </div>
+  <!-- Menu End -->
+
+  <!-- Title Start -->
+  <div class="container">
+    <div class="row title-row">
+      <div class="col title-empty-col"></div>
+      <div class="col-5 title-col">
+        <div class="title-main">
+          <a href="/html/el_club.html">El club</a>
+        </div>
+      </div>
+
+      <div class="col-5 title-col">
+        <div class="title-path">
+          <a href="/html/index.html">Inicio</a>
+          <span>/</span>
+          <a href="/html/el_club.html">El club</a>
+        </div>
+      </div>
+      <div class="col title-empty-col"></div>
+    </div>
+  </div>
+  <!-- Title End -->
+
+  <!-- Content Start -->
+  <div class="content-container">
+    <h1>Club de Gimnasia Rítmica la Mojonera</h1>
+    <p>
+      En el club deportivo La Mojonera llevamos formando gimnastas de todos los niveles y categorías desde que se fundó
+      en el año 2017. Desarrollamos nuestras actividades de entrenamiento en las instalaciones municipales”Carpa de usos
+      multíples” de La Mojonera (Almería), siendo el único club de gimnasia rítmica de este pueblo.
+    </p>
+    <p>
+      Las integrantes del club Atzar cuentan en su palmarés con medallas de oro, plata y bronce en diversos campeonatos
+      provinciales y autonómicos. En este 202 las gimnastas Laura Gil y Milagros Casado serán las primeras en participar
+      en un Campeonato Nacional Aboluto.
+    </p>
+    <br>
+    <img src="/assets/original/gimt (1)2.jpeg" class="normal-img">
+    <p>
+      En la actualidad contamos con más de 50 gimnastas que, divididas entre las secciones de escuela y club, aprenden y
+      evolucionan para participar en competiciones a todos los niveles. En la sección escuela da comienzo su primera
+      formación. Desde los tres años adquieren habilidades no sólo técnicas para poder avanzar en la gimnasia rítmica,
+      sino también de compañerismo y respeto hacia sus compañeras, entrenadoras y material. Su participación en
+      competiciones va desde los sencillos. Encuentros Deportivos hasta los Campeonatos Provinciales, de mayor
+      categoría, pasando por los trofeos de exhibición a los que es invitado el club. Aunque en la sección escuela se
+      fomenta más el aspecto recreativo, ésta es nuestro pilar más importante, ya que aquí se empiezan a formar las
+      gimnastas que más adelante nos representarán a los más altos niveles.
+    </p>
+    <p>
+      Aquellas alumnas que demuestran más habilidades son propuestas por las entrenadoras para el siguiente escalón
+      deportivo: la sección club. A este nivel continúan adquiriendo conocimientos gimnásticos y aumentando su
+      rendimiento competitivo, dándoles acceso a los Campeonatos Autonómicos y Nacionales, ya como gimnastas federadas
+    </p>
+    <br>
+
+    <p>
+      Todo ello no sería posible sin un buen equipo técnico, formado por entrenadoras especialmente cualificadas y
+      acreditadas, algunas procedentes de la alta competición a nivel nacional. Como complemento imprescindible contamos
+      también con un profesor especializado en la disciplina de Ballet.
+    </p>
+    <p>
+      La conjunción de estos elementos, sin olvidar el trabajo y sacrificio de los padres para que sus hijas formen
+      parte y disfruten de nuestro proyecto, nos convierte en un gran club.
+    </p>
+  </div>
+  <hr>
+  <!-- Content End -->
+
+  <!-- Sections Start -->
+  <div class="sections-container">
+    <div>
+      <img src="/assets/Más fotos/WhatsApp Image 2020-11-08 at 11.45.21 (1).jpeg">
+      <h2>Cuerpo técnico</h2>
+    </div>
+    <div>
+      <img src="/assets/original/gimt (2)2.jpeg">
+      <h2>Palmarés</h2>
+    </div>
+  </div>
+  <!-- Sections End -->
+
+
+  <!-- Footer Start -->
+  <div class="container footer">
+    <div class="row">
+      <div class="col-4 footer-col">
+        <h1>Ven a visitarnos</h1>
+        <p>
+          Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
+          texto de ejemplo texto de ejemplo
+        </p>
+        <p>
+          <a>
+            C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
+            Almería
           </a>
-          <div class="header-icon-wrapper">
-            <a
-              href="https://www.facebook.com/ritmicalamojonera"
-              class="fab fa-facebook-square"
-            ></a>
-            <a
-              href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg"
-              class="fab fa-youtube"
-            ></a>
-            <a
-              href="https://www.instagram.com/ritmicalamojonera/?hl=es"
-              class="fab fa-instagram-square"
-            ></a>
-            <a href="/html/login.html" class="far fa-user"></a>
-          </div>
-        </div>
-        <div class="col"></div>
+        </p>
       </div>
-      <!-- Header End -->
-
-      <!-- Navbar Start -->
-      <div class="row nav-row">
-        <div class="col"></div>
-        <div class="col-10 nav-col" id="nav-col">
-          <a class="nav-btn" href="/html/index.html">Inicio</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/el_club.html">El Club</a>
-            <div class="dropdown-content">
-              <a href="/html/cuerpo_tecnico.html">Cuerpo técnico</a>
-              <a href="/html/palmares.html">Palmarés</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="/html/normativa.html">Normativa</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/actividades.html">Actividades</a>
-            <div class="dropdown-content">
-              <a href="/html/actividades_verano.html">Actividades de verano</a>
-              <a href="/html/escuela.html">Escuela</a>
-              <a href="/html/federadas.html">Federadas</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="/html/matriculacion.html">Matriculación</a>
-          <div class="dropdown">
-            <a class="nav-btn" href="/html/competiciones.html">Competiciones</a>
-            <div class="dropdown-content">
-              <a href="/html/provincial.html">Provincial</a>
-              <a href="/html/autonomica.html">Autonómica</a>
-              <a href="/html/nacional.html">Nacional</a>
-            </div>
-          </div>
-          <a class="nav-btn" href="/html/noticias.html">Noticias</a>
-          <a class="nav-btn" href="/html/galeria.html">Galería</a>
-          <a class="nav-btn" href="/html/contacto.html">Contacto</a>
-          <a class="dropdown-icon" href="javascript:void(0)">
-            <span class="fas fa-bars"></span>
-          </a>
-        </div>
-        <div class="col"></div>
+      <div class="col-4 footer-col">
+        <h1>Contacta con nosotros</h1>
+        <p>
+          Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
+          texto de ejemplo
+        </p>
+        <p>
+          Correo: <a>cdrlamojonera@gmail.com</a><br />
+          Telefono: <a>621 013 265</a><br />
+          Whatsapp: <a>+34 621 013 265</a><br />
+        </p>
       </div>
-      <!-- Navbar End -->
-    </div>
-    <!-- Menu End -->
-
-    <!-- Title Start -->
-    <div class="container">
-      <div class="row title-row">
-        <div class="col title-empty-col"></div>
-        <div class="col-5 title-col">
-          <div class="title-main">
-            <a href="/html/el_club.html">El club</a>
-          </div>
-        </div>
-
-        <div class="col-5 title-col">
-          <div class="title-path">
-            <a href="/html/index.html">Inicio</a>
-            <span>/</span>
-            <a href="/html/el_club.html">El club</a>
-          </div>
-        </div>
-        <div class="col title-empty-col"></div>
+      <div class="col-4 footer-col">
+        <h1>Siguenos en redes sociales</h1>
+        <p>
+          Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
+          texto de ejemplo texto de ejemplo texto de ejemplo
+        </p>
+        <a href="https://www.facebook.com/ritmicalamojonera" class="fab fa-facebook-square"></a>
+        <a href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg" class="fab fa-youtube"></a>
+        <a href="https://www.instagram.com/ritmicalamojonera/?hl=es" class="fab fa-instagram-square"></a>
       </div>
     </div>
-    <!-- Title End -->
-
-    <!-- Content Start -->
-    <div class="page-principal">
-      <div class="container-club">
-        <div class="col-club">
-          <div class="text-club">
-            <h2>
-              <strong>Club de Gimnasia Rítmica La Mojonera</strong>
-            </h2>
-            <p>
-              En el club La MEn el club La Mojonera llevamos formando gimnastas
-              de todos los niveles y categorías desde que se fundó en el año
-              2017. Desarrollamos nuestras actividades de entrenamiento en las
-              instalaciones municipales”Carpa de usos multíples” de La Mojonera
-              (Almería), siendo el único club de gimnasia rítmica de este
-              pueblo.
-            </p>
-            <p>
-              Las integrantes del club Atzar cuentan en su
-              <a id="links" href="palmares.html">
-                <strong>palmarés</strong>
-              </a>
-              con medallas de oro, plata y bronce en diversos campeonatos
-              provinciales y autonómicos. En este 202 las gimnastas Laura Gil y
-              Milagros Casado serán las primeras en participar en un Campeonato
-              Nacional Aboluto.
-            </p>
-            <br />
-            <br />
-            <div class="container-img">
-              <img
-                loading="lazy"
-                class="aling-right"
-                src="/assets/original/gimt (1).jpeg"
-                alt="Imagen del club"
-                width="500"
-                height="333"
-              />
-              <p>
-                En la actualidad contamos con más de 50 gimnastas que, divididas
-                entre las secciones de escuela y club, aprenden y evolucionan
-                para participar en competiciones a todos los niveles. En la
-                sección escuela da comienzo su primera formación. Desde los tres
-                años adquieren habilidades no sólo técnicas para poder avanzar
-                en la gimnasia rítmica, sino también de compañerismo y respeto
-                hacia sus compañeras, entrenadoras y material. Su participación
-                en competiciones va desde los sencillos. Encuentros Deportivos
-                hasta los Campeonatos Provinciales, de mayor categoría, pasando
-                por los trofeos de exhibición a los que es invitado el club.
-                Aunque en la sección escuela se fomenta más el aspecto
-                recreativo, ésta es nuestro pilar más importante, ya que aquí se
-                empiezan a formar las gimnastas que más adelante nos
-                representarán a los más altos niveles.
-              </p>
-            </div>
-          </div>
-        </div>
+    <div class="row">
+      <div class="col footer-copyright-col">
+        <p>
+          Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
+          reservados
+        </p>
       </div>
     </div>
-    <!-- Content End -->
+    <button onclick="goBack()" id="goback-btn">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+  </div>
+  <!-- Footer End -->
 
-    <!-- Footer Start -->
-    <div class="container footer">
-      <div class="row">
-        <div class="col-4 footer-col">
-          <h1>Ven a visitarnos</h1>
-          <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo texto de ejemplo
-          </p>
-          <p>
-            <a>
-              C/ Av. Europa, 143 (Carpa de usos multiples), La Mojonera-04745,
-              Almería
-            </a>
-          </p>
-        </div>
-        <div class="col-4 footer-col">
-          <h1>Contacta con nosotros</h1>
-          <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo
-          </p>
-          <p>
-            Correo: <a>cdrlamojonera@gmail.com</a><br />
-            Telefono: <a>621 013 265</a><br />
-            Whatsapp: <a>+34 621 013 265</a><br />
-          </p>
-        </div>
-        <div class="col-4 footer-col">
-          <h1>Siguenos en redes sociales</h1>
-          <p>
-            Texto de ejemplo texto de ejemplo texto de ejemplo texto de ejemplo
-            texto de ejemplo texto de ejemplo texto de ejemplo
-          </p>
-          <a
-            href="https://www.facebook.com/ritmicalamojonera"
-            class="fab fa-facebook-square"
-          ></a>
-          <a
-            href="https://www.youtube.com/channel/UC1t4MldjalCTkdC2cYVgVfg"
-            class="fab fa-youtube"
-          ></a>
-          <a
-            href="https://www.instagram.com/ritmicalamojonera/?hl=es"
-            class="fab fa-instagram-square"
-          ></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col footer-copyright-col">
-          <p>
-            Copyright © 2020 - Ritmica la Mojonera - Todos los derechos
-            reservados
-          </p>
-        </div>
-      </div>
-      <button onclick="goBack()" id="goback-btn">
-        <i class="fas fa-arrow-up"></i>
-      </button>
-    </div>
-    <!-- Footer End -->
+  <!-- JQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/js/main.js"></script>
+</body>
 
-    <script src="/js/main.js"></script>
-  </body>
 </html>
