--- a/html/modificar_imagenes.html
+++ b/html/modificar_imagenes.html
@@ -87,21 +87,34 @@
 
 
   <!-- Content Start -->
-  <div class="main">
-    <div class="content-container">
-      <h1>Añadir una imágen</h1>
-      <div class="form-container">
-        <form action="#" method="POST">
-
-          <div class="form-field">
-            <label for="trophy-image" class="field-title">Imagen</label><br />
-            <input type="file" id="trophy-image" name="trophy-image" autocomplete="off" /><br />
-          </div>
-
-          <input type="submit" value="Enviar" />
-      </div>
-      </form>
-    </div>
+  <div class="content-container">
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.06.jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.10\ \(1\).jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.12.jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.13\ \(1\).jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.17.jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.20.jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.23\ \(1\).jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-11-08\ at\ 11.45.21.jpeg');
+        "></div>
+    <div class="img-container" style="
+          background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-11-08\ at\ 11.45.21\ \(1\).jpeg');
+        "></div>
   </div>
   <!-- Content End -->
 
