--- a/html/modificar_imagenes.html
+++ b/html/modificar_imagenes.html
@@ -90,31 +90,49 @@
   <div class="content-container">
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.06.jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.10\ \(1\).jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-27\ at\ 15.39.12.jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.13\ \(1\).jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.17.jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.20.jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-10-29\ at\ 14.49.23\ \(1\).jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-11-08\ at\ 11.45.21.jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
     <div class="img-container" style="
           background-image: url('/assets/Más fotos/WhatsApp\ Image\ 2020-11-08\ at\ 11.45.21\ \(1\).jpeg');
-        "></div>
+        ">
+      <img src="/assets/cross.jpg" class="bin-img">
+    </div>
   </div>
   <!-- Content End -->
 
