--- a/html/login.html
+++ b/html/login.html
@@ -31,16 +31,22 @@
           <div class="col-12 user-img text-center">
             <img src="/assets/logo_ritmica.png" width="150px" height="150px" />
           </div>
-          <form class="formulario">
+          <form action="/php/login.php" method="POST" class="formulario">
             <h1>Iniciar sesión</h1>
             <div class="form-group" id="user-group">
-              <input type="text" class="form-control" placeholder="usuario" />
+              <input
+                type="text"
+                class="form-control"
+                placeholder="usuario"
+                name="username"
+              />
             </div>
             <div class="form-group" id="password-group">
               <input
                 type="password"
                 class="form-control"
                 placeholder="contraseña"
+                name="password"
               />
             </div>
             <div class="col-12 forgot" id="forgot-icon">
@@ -54,7 +60,7 @@
               >
             </div>
             <div class="form-group form-button text-right">
-              <button type="submit" class="btn btn-primary">
+              <button type="submit" class="btn btn-primary" name="btnContinuar">
                 <i class="fas fa-arrow-right"></i> Continuar
               </button>
             </div>
